--- a/package.json
+++ b/package.json
@@ -3,25 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "content:generate": "node scripts/content-pipeline.js",
+    "content:daily": "npm run content:generate",
+    "health:check": "node scripts/health-check.js",
+    "deploy": "npm run build && npm run health:check",
+    "deploy:vercel": "node scripts/deploy.js"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "@google/generative-ai": "^0.24.1",
+    "dotenv": "^17.2.1",
+    "fs-extra": "^11.3.0",
+    "gray-matter": "^4.0.3",
+    "next": "13.5.6",
+    "next-mdx-remote": "^5.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
-    "@eslint/eslintrc": "^3"
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.34",
+    "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8.4.22",
+    "tailwindcss": "^3.3.1",
+    "typescript": "5.0.4"
   }
 }
