--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@vercel/analytics": "^1.5.0",
     "dotenv": "^17.2.1",
     "fs-extra": "^11.3.0",
     "gray-matter": "^4.0.3",
