--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,21 @@
     },
     "src/app/api/newsletter/route.ts": {
       "maxDuration": 30
+    },
+    "src/app/api/automated-content/route.ts": {
+      "maxDuration": 60
+    },
+    "src/app/api/search/route.ts": {
+      "maxDuration": 30
+    },
+    "src/app/api/cron/content/route.ts": {
+      "maxDuration": 300
     }
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/cron/content",
+      "schedule": "0 */1 * * *"
+    }
+  ]
 }
